fixed positioning for comic covers
these covers will be stacked and rotated for each episode

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,11 +24,11 @@ li {
     flex-direction: column;
     align-items: center;
     
+    
 }
 
 footer {
     bottom: 0;
-    position: absolute;
     width: 100vw;
     height: 2.5rem;
 }
@@ -62,4 +62,31 @@ hr {
 
 h2 {
     margin-top: 2em;
+}
+
+.panel {
+    width: 10em;
+}
+
+main {
+    position: relative;
+    margin-bottom: 20em;
+}
+
+.comic_cover_1 {
+    rotate: -17deg;
+    left: 74px;
+    top: 0;
+    position: absolute;
+}
+
+.comic_cover_2 {
+    rotate: 17deg;
+    z-index: -1;
+    position: absolute;
+    left: 160px;
+}
+
+p {
+    margin-bottom: 1rem;
 }
